--- a/Practices/RSA_/nbproject/project.properties
+++ b/Practices/RSA_/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/RSA_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.bcprov-jdk16-1.46-sources.jar=bcprov-jdk16-1.46-sources.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcprov-jdk16-1.46-sources.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
