--- a/Practices/RSA_/nbproject/project.properties
+++ b/Practices/RSA_/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=RSA_
-application.vendor=Ricardo
+application.vendor=rsagr
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/RSA_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.bcprov-jdk15on-1.60.jar=bcprov-jdk15on-1.60.jar
 file.reference.bcprov-jdk16-1.46-sources.jar=bcprov-jdk16-1.46-sources.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcprov-jdk16-1.46-sources.jar}
+    ${file.reference.bcprov-jdk16-1.46-sources.jar}:\
+    ${file.reference.bcprov-jdk15on-1.60.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
